# sample_project

./: pyproject.toml
.github/workflows/: main.yml
sample_project/: .gitignore  config.json
sample_project/github/: workflow.yaml
sample_project/src/: app_globals.py  cache_manager.py  calculator.py  collection_executed.py  combined_utils.py  config_reader.py  data_processor.py  dynamic_loader.py  external_deps.py  formatter.py  generators.py  globals_consumer.py  import_only.py  math_utils.py  numpy_utils.py  pure_utils.py  requests_utils.py  string_utils.py
sample_project/src/models/: __init__.py  product.py  user.py
sample_project/tests/: test_cache_manager.py  test_calculator.py  test_collection_executed.py  test_combined_utils.py  test_config_reader.py  test_data_processor.py  test_dynamic_loader.py  test_external_deps.py  test_formatter.py  test_generators.py  test_globals_consumer.py  test_import_only.py  test_math_utils.py  test_models.py  test_numpy_utils.py  test_product_only.py  test_pure_utils.py  test_requests_utils.py  test_string_utils.py  test_user_only.py
