[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-ezmon-nocov"
authors = [
    { name = "Tibor Arpas", email = "tibor@testmon.org" },
]
dynamic =  ["version"]

description = "Selects tests affected by changed files using import-based tracking and Roaring bitmaps (no coverage.py)"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["testing", "pytest", "plugin", "test-selection", "import-tracking"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Programming Language :: Python",
    "Framework :: Pytest",
]
dependencies = [
    "pytest>=5,<10",
    "requests>=2.20",
    "typing_extensions>=3.7; python_version < '3.8'",
    "pyroaring>=0.4.0",      # Roaring bitmaps for compact dependency storage (with fallback)
    "zstandard>=0.18.0",     # zstd compression for bitmap serialization (with fallback)
]

[project.optional-dependencies]
# For dependency graph generation (--ezmon-graph)
graph = [
    "networkx>=2.5",
    "pyvis>=0.3.0",
]
# All optional features
all = [
    "networkx>=2.5",
    "pyvis>=0.3.0",
]

# specify ezmon and tmserver as packages of this project
[tool.setuptools]
packages = [
    "ezmon",
]

[tool.setuptools.dynamic]
version = {attr = "ezmon.__init__.TESTMON_VERSION"}

[tool.black]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \ez-viz        #visualizer is not part of the plugin package
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | io.intellij/
)
'''


[project.entry-points.pytest11]
pytest-ezmon-nocov = "ezmon.pytest_ezmon"
