[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-ezmon-nocov"
dynamic = ["version"]
description = "Selects tests affected by changed files using import-based tracking and Roaring bitmaps (no coverage.py)"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
keywords = ["testing", "pytest", "plugin", "test-selection", "import-tracking"]
authors = [
    { name = "Tibor Arpas", email = "tibor@testmon.org" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Programming Language :: Python",
    "Framework :: Pytest",
]
dependencies = [
    "pytest>=5,<10",
    "requests>=2.20",
    "typing_extensions>=3.7; python_version < '3.8'",
    "pyroaring>=0.4.0",
    "zstandard>=0.18.0",
]

[project.optional-dependencies]
graph = [
    "networkx>=2.5",
    "pyvis>=0.3.0",
]
all = [
    "networkx>=2.5",
    "pyvis>=0.3.0",
]

[project.entry-points.pytest11]
pytest-ezmon-nocov = "ezmon.pytest_ezmon"

[tool.setuptools.packages.find]
where = ["."]
include = ["ezmon*"]

[tool.setuptools.dynamic]
version = { attr = "ezmon.__init__.TESTMON_VERSION" }